--- a/views/HomePage.ejs
+++ b/views/HomePage.ejs
@@ -1,5 +1,35 @@
-<% layout('/layouts/BoilerPlate') %>
-    <h1>YelpCamp</h1>
-    <p><i>A Full-Stack Project inspired from Colt Steele's The Web Developer Bootcamp on Udemy.</i></p>
-    <p>Check out our new campgrounds at
-        <a href="/campgrounds" class="btn btn-success btn-sm"><b>/campgrounds</b></a>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YelpCamp</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/CSS/Home Page.css">
+</head>
+
+<body class="d-flex text-white bg-dark">
+    <div class="cover-container d-flex flex-column justify-content-center align-items-center w-100 h-100 p-3 mx-auto">
+        <main class="px-3 my-auto text-center">
+            <h1>YelpCamp</h1>
+            <p class="lead review">
+                Welcome to YelpCamp!<br>
+                Jump right in and explore our many campgrounds.<br>
+                Feel free to share some of your own and comment on others!
+            </p>
+            <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
+                Campgrounds</a>
+        </main>
+        <footer class="mt-auto text-center text-white-50">
+            <p>&copy; 2022</p>
+        </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
