--- a/views/campgrounds/Index.ejs
+++ b/views/campgrounds/Index.ejs
@@ -1,6 +1,6 @@
 <% layout('/layouts/BoilerPlate') %>
     <% if(!errorMessage) { %>
-        <div id="map" style="height: 500px;width: 100%;" class="mb-3"></div>
+        <div id="clusterMap" class="mb-3"></div>
         <h1>All Campgrounds</h1>
         <a href="/" class="btn btn-secondary btn-sm">Go Home</a>
         <a href="/campgrounds/new" class="btn btn-success btn-sm">New</a>
