--- a/views/campgrounds/Remove.ejs
+++ b/views/campgrounds/Remove.ejs
@@ -9,8 +9,7 @@
                             <% campground.images.forEach((image, index)=> { %>
                                 <div class="carousel-item <%= (index === 0) ? 'active' : '' %>" data-bs-interval="5000">
                                     <a href="<%=image.url%>"><img src="<%=image.cardImage%>" alt=""
-                                            class="d-block w-100" title="Click to view Image"
-                                            style="cursor: pointer;"></a>
+                                            class="d-block w-100 pointer" title="Click to view Image"></a>
                                 </div>
                                 <% }); %>
                         </div>
