--- a/views/campgrounds/Show.ejs
+++ b/views/campgrounds/Show.ejs
@@ -9,8 +9,7 @@
                             <% campground.images.forEach((image, index)=> { %>
                                 <div class="carousel-item <%= (index === 0) ? 'active' : '' %>" data-bs-interval="5000">
                                     <a href="<%=image.url%>"><img src="<%=image.cardImage%>" alt=""
-                                            class="d-block w-100" title="Click to view Image"
-                                            style="cursor: pointer;"></a>
+                                            class="d-block w-100 pointer" title="Click to view Image"></a>
                                 </div>
                                 <% }); %>
                         </div>
@@ -97,7 +96,7 @@
                 <% } %>
         </div>
         <div class="col-lg-6">
-            <div id='map' style="height:400px;width:100%;" class="mb-3"></div>
+            <div id="campgroundMap" class="mb-3"></div>
             <div class="card mb-3">
                 <div class="card-header">
                     <h4>Leave a Review</h4>
@@ -155,7 +154,7 @@
                                     </b><span class="starability-result" data-rating="<%= review.rating %>">Rated: <%=
                                             review.rating %> stars</span></div>
                                 <div class="card-body">
-                                    <p style="text-align: justify;text-justify: inter-word;">
+                                    <p class="review">
                                         <%= review.body %>
                                     </p>
                                     <% if(currentUser && currentUser.equals(review.author)) { %>
