--- a/views/layouts/BoilerPlate.ejs
+++ b/views/layouts/BoilerPlate.ejs
@@ -8,15 +8,11 @@
     <title>
         <%= title %>
     </title>
-    <style>
-        body {
-            min-width: 600px;
-        }
-    </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet" href="/CSS/Application Styles.css">
 </head>
 
 <body class="d-flex flex-column vh-100">
