--- a/views/users/Login.ejs
+++ b/views/users/Login.ejs
@@ -7,11 +7,10 @@
                         alt="" class="card-img-top" />
                     <div class="card-body">
                         <h3 class="card-title">Login to Continue</h3>
-                        <p style="color: red;" class="mb-3 mt-4">* Mandatory Fields</p>
+                        <p class="mb-3 mt-4 mandatory">* Mandatory Fields</p>
                         <form action="/login" method="post" class="needs-validation" novalidate>
                             <div class="mt-3">
-                                <label for="username" class="form-label">Enter Username<span
-                                        style="color: red;">*</span>
+                                <label for="username" class="form-label">Enter Username<span class="mandatory">*</span>
                                     : </label>
                                 <input type="text" class="form-control" name="username" id="username" autofocus
                                     placeholder="Enter Username" required>
@@ -23,8 +22,7 @@
                                 </div>
                             </div>
                             <div class="mt-3">
-                                <label for="password" class="form-label">Enter Password<span
-                                        style="color: red;">*</span>
+                                <label for="password" class="form-label">Enter Password<span class="mandatory">*</span>
                                     : </label>
                                 <input type="password" class="form-control" name="password" id="password"
                                     placeholder="Enter Password" required>
