--- a/views/campgrounds/Manage.ejs
+++ b/views/campgrounds/Manage.ejs
@@ -32,7 +32,7 @@
                                                     value="<%=campground.images[index].filename%>">
                                                 <a href="<%=campground.images[index].url%>" title="Click to view Image">
                                                     <img src="<%=campground.images[index].thumbnail%>"
-                                                        class="img-thumbnail" alt="">
+                                                        class="img-thumbnail" alt="" crossorigin>
                                                 </a>
                                             </div>
                                             <% } %>
@@ -44,7 +44,7 @@
                                                         <a href="<%=campground.images[index+1].url%>"
                                                             title="Click to view Image">
                                                             <img src="<%=campground.images[index+1].thumbnail%>"
-                                                                class="img-thumbnail" alt="">
+                                                                class="img-thumbnail" alt="" crossorigin>
                                                         </a>
                                                     </div>
                                                     <% } %>
@@ -57,7 +57,7 @@
                                                                 <a href="<%=campground.images[index+2].url%>"
                                                                     title="Click to view Image">
                                                                     <img src="<%=campground.images[index+2].thumbnail%>"
-                                                                        class="img-thumbnail" alt="">
+                                                                        class="img-thumbnail" alt="" crossorigin>
                                                                 </a>
                                                             </div>
                                                             <% } %>
