--- a/views/users/Register.ejs
+++ b/views/users/Register.ejs
@@ -4,7 +4,7 @@
             <div class="col-lg-6 offset-lg-3">
                 <div class="card shadow">
                     <img src="https://images.unsplash.com/photo-1533873984035-25970ab07461?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1267&q=80"
-                        alt="" class="card-img-top" />
+                        alt="" class="card-img-top" crossorigin />
                     <div class="card-body">
                         <h3 class="card-title">Create a new account</h3>
                         <p class="mb-3 mt-4 mandatory">* Mandatory Fields</p>
