--- a/views/campgrounds/Show.ejs
+++ b/views/campgrounds/Show.ejs
@@ -9,7 +9,7 @@
                             <% campground.images.forEach((image, index)=> { %>
                                 <div class="carousel-item <%= (index === 0) ? 'active' : '' %>" data-bs-interval="5000">
                                     <a href="<%=image.url%>"><img src="<%=image.cardImage%>" alt=""
-                                            class="d-block w-100 pointer" title="Click to view Image"></a>
+                                            class="d-block w-100 pointer" title="Click to view Image" crossorigin></a>
                                 </div>
                                 <% }); %>
                         </div>
@@ -28,7 +28,7 @@
                     </div>
                     <% } else {%>
                         <img src="https://res.cloudinary.com/dtwgxcqkr/image/upload/v1675496482/YelpCamp%20Related%20Media/No_Image_Available_onn3wa.webp"
-                            alt="No Image Available" class="img-fluid">
+                            alt="No Image Available" class="img-fluid" crossorigin>
                         <% } %>
                             <div class="card-body">
                                 <h1 class="card-title">
