--- a/views/users/Login.ejs
+++ b/views/users/Login.ejs
@@ -4,7 +4,7 @@
             <div class="col-lg-6 offset-lg-3">
                 <div class="card shadow">
                     <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
-                        alt="" class="card-img-top" />
+                        alt="" class="card-img-top" crossorigin />
                     <div class="card-body">
                         <h3 class="card-title">Login to Continue</h3>
                         <p class="mb-3 mt-4 mandatory">* Mandatory Fields</p>
