Categories & Pagination Update 2.0.1V

--- a/views/layouts/BoilerPlate.ejs
+++ b/views/layouts/BoilerPlate.ejs
@@ -13,9 +13,10 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js' crossorigin></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet' crossorigin />
     <link rel="stylesheet" href="/CSS/Application Styles.css">
+    <link rel="stylesheet" href="/CSS/Index Page.css">
 </head>
 
-<body class="d-flex flex-column vh-100">
+<body class="d-flex flex-column vh-100 bg-light justify-content-between">
     <%- include('../partials/Navbar') %>
         <main class="container mt-3 mb-3">
             <%- include('../partials/Flash') %>
