--- a/views/campgrounds/Index.ejs
+++ b/views/campgrounds/Index.ejs
@@ -1,134 +1,138 @@
 <% layout('/layouts/BoilerPlate') %>
   <% if(!errorMessage) { %>
     <div id="clusterMap" class="mb-3"></div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom mb-3 text-center">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 text-center">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#categories">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="categories">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">
-                <h4>Latest</h4>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <h4>Premier</h4>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <h4>Types</h4>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <h4>Locations</h4>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <h4>Amenities</h4>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <h4>Activities</h4>
-              </a>
-            </li>
+            <% for(let category of categories) { %>
+              <% if(category===current.category) { %>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page">
+                    <h4>
+                      <%=category%>
+                    </h4>
+                  </a>
+                </li>
+                <% } else if(category==="Latest" || category==="Premier" ) { %>
+                  <li class="nav-item">
+                    <a href="/campgrounds?category=<%=category%>&page=1&limit=<%=current.limit%>" class="nav-link">
+                      <h4>
+                        <%=category%>
+                      </h4>
+                    </a>
+                  </li>
+                  <% } else { %>
+                    <li class="nav-item">
+                      <a href="/campgrounds?category=<%=category%>" class="nav-link">
+                        <h4>
+                          <%=category%>
+                        </h4>
+                      </a>
+                    </li>
+                    <% } %>
+                      <% } %>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search for more" aria-label="Search">
-            <button class="btn btn-outline-dark" type="submit">Search</button>
-          </form>
         </div>
       </div>
     </nav>
-    <div class="d-flex flex-row flex-wrap justify-content-evenly">
-      <% for (let campground of campgrounds) { %>
-        <% let campgroundBackgroundImageURL=(campground.images[0].url).substr(0, 49) + "o_30/" +
-          (campground.images[0].url).substr(49) %>
-          <div class="card mb-5" id="view"
-            style="background-image: url(<%=campgroundBackgroundImageURL%>); background-size: cover;">
-            <div class="col d-flex flex-column justify-content-between">
-              <div class="row d-none">
-                <% if(campground.images[0]) { %>
-                  <a href="<%=campground.images[0].url%>" title="Click to view Image">
-                    <img src="<%=campground.images[0].cardImage%>" alt="Campground Image" class="img-fluid w-100 h-100"
-                      crossorigin>
-                  </a>
-                  <% } else {%>
-                    <img
-                      src="https://res.cloudinary.com/dtwgxcqkr/image/upload/v1675496482/YelpCamp%20Related%20Media/No_Image_Available_onn3wa.webp"
-                      alt="No Image Available" class="img-fluid" crossorigin>
-                    <% } %>
-              </div>
-              <div class="row">
-                <div class="card-body px-4">
-                  <h1 class="card-title">
-                    <%=campground.title%>
-                  </h1>
-                  <div class="card-text">
-                    <small class="text-muted">
-                      <%=campground.location%>
-                    </small>
-                    <p class="mt-3">
-                      <b>Price:</b> Rs. <%=campground.price%>/-
-                    </p>
-                    <p class="mt-3">
-                      <b>Suggested By:</b>
-                      <%=campground.author.username%>
-                    </p>
-                    <p class="mt-3 text-justify">
-                      <%=campground.description.slice(0, 100)%>...
-                    </p>
+    <% for( let campgrounds of campgroundResults ) { %>
+      <% if(campgrounds.heading) { %>
+        <h2>
+          <%=campgrounds.heading%> (<%=campgrounds.content.length%>)
+        </h2>
+        <hr>
+        <% } %>
+          <div class="d-flex flex-row flex-wrap justify-content-evenly gap-4">
+            <% for (let campground of campgrounds.content) { %>
+              <% let campgroundBackgroundImageURL=(campground.images[0].url).substr(0, 49) + "o_30/" +
+                (campground.images[0].url).substr(49) %>
+                <div class="card mb-5" id="view"
+                  style="background-image: url(<%=campgroundBackgroundImageURL%>); background-size: cover;">
+                  <div class="col d-flex flex-column justify-content-between">
+                    <div class="row d-none">
+                      <% if(campground.images[0]) { %>
+                        <a href="<%=campground.images[0].url%>" title="Click to view Image">
+                          <img src="<%=campground.images[0].cardImage%>" alt="Campground Image"
+                            class="img-fluid w-100 h-100" crossorigin>
+                        </a>
+                        <% } else {%>
+                          <img
+                            src="https://res.cloudinary.com/dtwgxcqkr/image/upload/v1675496482/YelpCamp%20Related%20Media/No_Image_Available_onn3wa.webp"
+                            alt="No Image Available" class="img-fluid" crossorigin>
+                          <% } %>
+                    </div>
+                    <div class="row">
+                      <div class="card-body px-4">
+                        <h1 class="card-title">
+                          <%=campground.title%>
+                        </h1>
+                        <div class="card-text">
+                          <small class="text-muted">
+                            <%=campground.location%>
+                          </small>
+                          <p class="mt-3">
+                            <b>Price:</b> Rs. <%=campground.price%>/-
+                          </p>
+                          <p class="mt-3">
+                            <b>Suggested By:</b>
+                            <%=campground.author.username%>
+                          </p>
+                          <p class="mt-3 text-justify">
+                            <%=campground.description.slice(0, 100)%>...
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row text-center pb-3 px-5">
+                      <a href="/campgrounds/<%=campground._id%>" class="card-link btn btn-outline-dark btn-sm"
+                        title="View Campground">View</a>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="row text-center pb-3 px-5">
-                <a href="/campgrounds/<%=campground._id%>" class="card-link btn btn-outline-dark btn-sm"
-                  title="View Campground">View</a>
-              </div>
-            </div>
+                <% } %>
           </div>
           <% } %>
-    </div>
-    <div class="page-header"></div>
-    <ul id="pagination">
-      <% let last=(total%current.limit===0) ? (total/current.limit) : (total/current.limit) + 1; %>
-        <% for (let page=1; page<=last; page++) {%>
-          <li>
-            <% if(page===current.page){ %>
-              <a class="active">
-                <%=page%>
-              </a>
-              <% } else { %>
-                <a href="/campgrounds?page=<%=page%>&limit=<%=current.limit%>">
-                  <%=page%>
-                </a>
-                <% } %>
-          </li>
-          <% } %>
-    </ul>
-    <script>
-      let mapboxToken = `<%-process.env.MAPBOX_TOKEN%>`;
-      let campgrounds = `<%-JSON.stringify(campgrounds)%>`
-    </script>
-    <script src="/JS/Cluster Map.js"></script>
-    <% } else { %>
-      <div class="d-flex flex-column justify-content-evenly align-items-center">
-        <h1>All Campgrounds</h1>
-        <p>
-          <%= errorMessage %>
-        </p>
-        <p>
-          <a href="/" class="btn btn-outline-secondary btn-sm">Go Home</a>
-          <a href="/campgrounds/new" class="btn btn-outline-success btn-sm">New</a>
-        </p>
-        <div class="text-center"><img class="img-fluid" src="https://res.cloudinary.com/dtwgxcqkr/image/upload/v1699117125/YelpCamp%20Related%20Media/c2z8yuattlh02hqy9zra.png"
-            title="error icons" alt="Error icons created by LAFS - Flaticon">
-        </div>
-      </div>
-      <% } %>
+            <% if(current.category==="Latest" || current.category==="Premier" ){ %>
+              <div class="page-header"></div>
+              <ul id="pagination">
+                <% let last=(total%current.limit===0) ? (total/current.limit) : (total/current.limit) + 1; %>
+                  <% for (let page=1; page<=last; page++) {%>
+                    <li>
+                      <% if(page===current.page){ %>
+                        <a class="active">
+                          <%=page%>
+                        </a>
+                        <% } else { %>
+                          <a href="/campgrounds?category=<%=current.category%>&page=<%=page%>&limit=<%=current.limit%>">
+                            <%=page%>
+                          </a>
+                          <% } %>
+                    </li>
+                    <% } %>
+              </ul>
+              <% } %>
+                <script>
+                  let mapboxToken = `<%-process.env.MAPBOX_TOKEN%>`;
+                  let campgrounds = `<%-JSON.stringify(campgrounds)%>`
+                </script>
+                <script src="/JS/Cluster Map.js"></script>
+                <% } else { %>
+                  <div class="d-flex flex-column justify-content-evenly align-items-center">
+                    <h1>All Campgrounds</h1>
+                    <p>
+                      <%= errorMessage %>
+                    </p>
+                    <p>
+                      <a href="/" class="btn btn-outline-secondary btn-sm">Go Home</a>
+                      <a href="/campgrounds/new" class="btn btn-outline-success btn-sm">New</a>
+                    </p>
+                    <div class="text-center"><img class="img-fluid"
+                        src="https://res.cloudinary.com/dtwgxcqkr/image/upload/v1699117125/YelpCamp%20Related%20Media/c2z8yuattlh02hqy9zra.png"
+                        title="error icons" alt="Error icons created by LAFS - Flaticon">
+                    </div>
+                  </div>
+                  <% } %>
