Categories & Pagination Update 2.0.3V

--- a/views/layouts/BoilerPlate.ejs
+++ b/views/layouts/BoilerPlate.ejs
@@ -14,6 +14,7 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet' crossorigin />
     <link rel="stylesheet" href="/CSS/Application Styles.css">
     <link rel="stylesheet" href="/CSS/Index Page.css">
+    <link rel="stylesheet" href="/CSS/Categories Page.css">
 </head>
 
 <body class="d-flex flex-column vh-100 bg-light justify-content-between">
