--- a/views/partials/Footer.ejs
+++ b/views/partials/Footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer bg-dark py-3 mt-auto">
     <div class="d-flex justify-content-center">
-        <span class="text-muted">&copy; YelpCamp 2023</span>
+        <span class="text-white-50">&copy; YelpCamp 2023</span>
     </div>
 </footer>
