--- a/views/campgrounds/Categories.ejs
+++ b/views/campgrounds/Categories.ejs
@@ -11,10 +11,9 @@
         </h2>
         <hr>
         <% if(campgrounds.content.length) { %>
-            <div class="d-flex flex-row justify-content-start gap-4 wrapper">
+            <div class="d-flex flex-row justify-content-start gap-4 wrapper p-2">
                 <% for (let campground of campgrounds.content) { %>
-                    <% let campgroundBackgroundImageURL=(campground.images[0].url).substr(0, 49) + "o_30/" +
-                        (campground.images[0].url).substr(49) %>
+                    <% let campgroundBackgroundImageURL=(campground.images.length> 0) ? (campground.images[0].url).substr(0, 49) + "o_30/" + (campground.images[0].url).substr(49) : "" %>
                         <div class="card view"
                             style="background-image: url(<%=campgroundBackgroundImageURL%>); background-size: cover;">
                             <div class="col d-flex flex-column justify-content-between">
@@ -35,7 +34,7 @@
                                                 <%=campground.author.username%>
                                             </p>
                                             <p class="mt-3 text-justify">
-                                                <%=campground.description.slice(0, 100)%>...
+                                                <%= (campground.description) ? campground.description.slice(0, 100) + "..." : "" %>
                                             </p>
                                         </div>
                                     </div>
