--- a/views/campgrounds/Index.ejs
+++ b/views/campgrounds/Index.ejs
@@ -35,8 +35,7 @@
     </nav>
     <div class="d-flex flex-row flex-wrap justify-content-evenly gap-4">
       <% for (let campground of campgrounds) { %>
-        <% let campgroundBackgroundImageURL=(campground.images[0].url).substr(0, 49) + "o_30/" +
-          (campground.images[0].url).substr(49) %>
+        <% let campgroundBackgroundImageURL=(campground.images.length> 0) ? (campground.images[0].url).substr(0, 49) + "o_30/" + (campground.images[0].url).substr(49) : "" %>
           <div class="card mb-5 view"
             style="background-image: url(<%=campgroundBackgroundImageURL%>); background-size: cover;">
             <div class="col d-flex flex-column justify-content-between">
@@ -57,7 +56,7 @@
                       <%=campground.author.username%>
                     </p>
                     <p class="mt-3 text-justify">
-                      <%=campground.description.slice(0, 100)%>...
+                      <%= (campground.description) ? campground.description.slice(0, 100) + "..." : "" %>
                     </p>
                   </div>
                 </div>
