--- a/views/partials/NotFound.ejs
+++ b/views/partials/NotFound.ejs
@@ -1,7 +1,11 @@
 <div class="d-flex flex-column align-items-center text-center">
-    <div class="div mt-3 mb-3">
+    <div class="div mt-1 mb-1">
         <h3>Campgrounds Not Found :(</h3>
     </div>
+    <p>
+        <a href="/" class="btn btn-outline-secondary btn-sm">Go Home</a>
+        <a href="/campgrounds/new" class="btn btn-outline-success btn-sm">New</a>
+    </p>
     <div>
         <img class="img-fluid"
             src="https://res.cloudinary.com/dtwgxcqkr/image/upload/h_500/v1699117125/YelpCamp%20Related%20Media/c2z8yuattlh02hqy9zra.png"
